Forecasts via API should use the forecast queue

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -125,6 +125,8 @@ thorasApiServerV2:
   port: 80
   logLevel: "info"
   timescalePrimary: false
+  forecastQueue:
+    enabled: true
   catalogRefreshInterval: "60s"
   cacheWindow: "10s"
   additionalPvSecurityContext: {}
