--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -110,6 +110,8 @@ spec:
             value: {{ .Values.thorasApiServerV2.catalogRefreshInterval | quote }}
           - name: SERVICE_CACHE_WINDOW
             value: {{ .Values.thorasApiServerV2.cacheWindow | quote }}
+          - name: SERVICE_ENQUEUE_FORECASTS
+            value: {{ .Values.thorasApiServerV2.forecastQueue.enabled | quote }}
           - name: SERVICE_THORAS_NAMESPACE
             valueFrom:
               fieldRef:
