--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -122,7 +122,7 @@ thorasApiServerV2:
     memory: 100Mi
   port: 80
   logLevel: "info"
-  timescalePrimary: false
+  timescalePrimary: true
   catalogRefreshInterval: "60s"
   cacheWindow: "10s"
   additionalPvSecurityContext: {}
