--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -118,7 +118,7 @@ spec:
                 fieldPath: metadata.namespace
         ports:
         - containerPort: {{ .Values.thorasApiServerV2.containerPort }}
-        readinessProbe:
+        livenessProbe:
           httpGet:
             path: /health
             port: {{ .Values.thorasApiServerV2.containerPort }}
