--- a/charts/thoras/templates/dashboard/nginx-config-map.yaml
+++ b/charts/thoras/templates/dashboard/nginx-config-map.yaml
@@ -25,7 +25,7 @@ data:
 
         location /config.json {
             default_type application/json;
-            return 200 '{ "api_base_url": "", "cluster_name": "{{ .Values.cluster.name }}" }';
+            return 200 '{ "api_base_url": "", "extras": {{ toJson (merge (dict "cluster_name" .Values.cluster.name) .Values.thorasDashboard.extras) }} }';
         }
 
         location / {
