--- a/charts/thoras/templates/dashboard/nginx-config-map.yaml
+++ b/charts/thoras/templates/dashboard/nginx-config-map.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: thoras-dashboard-nginx-config
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "labels" . | nindent 4 }}
+  namespace: { { .Release.Namespace } }
+  labels: { { - include "labels" . | nindent 4 } }
 data:
   nginx.conf: |
     events {
@@ -25,7 +24,7 @@ data:
 
         location /config.json {
             default_type application/json;
-            return 200 '{ "api_base_url": "", "extras": {{ toJson (merge (dict "cluster_name" .Values.cluster.name) .Values.thorasDashboard.extras) }} }';
+            return 200 '{ "api_base_url": "", "extra": {{ toJson (merge (dict "cluster_name" .Values.cluster.name) .Values.thorasDashboard.extras) }} }';
         }
 
         location / {
