--- a/charts/thoras/templates/dashboard/nginx-config-map.yaml
+++ b/charts/thoras/templates/dashboard/nginx-config-map.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: thoras-dashboard-nginx-config
-  namespace: { { .Release.Namespace } }
-  labels: { { - include "labels" . | nindent 4 } }
+  namespace: {{ .Release.Namespace }}
+  labels: 
+    {{- include "labels" . | nindent 4 }}
 data:
   nginx.conf: |
     events {
