--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -215,6 +215,8 @@ spec:
                 key: password
           - name: SERVICE_COLLECTION_PARALLELIZATION
             value: "{{ .Values.metricsCollector.collector.parallelization | default 20}}"
+          - name: SERVICE_THORAS_VERSION
+            value: "{{ .Values.metricsCollector.collector.imageTag | default .Values.thorasVersion}}"
         resources:
           limits:
             memory: {{ .Values.metricsCollector.collector.limits.memory }}
