--- a/charts/thoras/tests/api_service_deployment_test.yaml
+++ b/charts/thoras/tests/api_service_deployment_test.yaml
@@ -24,3 +24,11 @@ tests:
       - equal:
           path: $.spec.template.spec.containers[0].env[?(@.name == 'SERVICE_POD_LOG_LABEL')].value
           value: "app.kubernetes.io/name=thoras"
+  - it: Ensure SERVICE_RESTART_WORKLOAD_ON_CPU is correct
+    set:
+      thorasApiServerV2:
+        restartWorkloadOnCpu: true
+    asserts:
+      - equal:
+          path: $.spec.template.spec.containers[0].env[?(@.name == 'SERVICE_RESTART_WORKLOAD_ON_CPU')].value
+          value: "true"
